deploy1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /client
        backend:
          serviceName: client-service
          servicePort: 8080
      - path: /demo
        backend:
          serviceName: quoteapp
          servicePort: 8080
